kubernetes/Int/deployments/default/actual-budget/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: actual-budget
  template:
    metadata:
      labels:
        app: actual-budget
    spec:
      containers:
        - name: actual-budget
          image: ghcr.io/actualbudget/actual-server:25.4.0
          volumeMounts:
            - name: pvc
              mountPath: /data
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: actual-budget
